<resources>
    <string name="app_name">Memory Game</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_over">Game Over!</string>
    <string name="title_activity_menu">SoC Senior Research Application</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_trivia">Trivia Game</string>

    <string name="memory_game_string">Memory Game</string>
    <string name="timeline_string">Timeline</string>
    <string name="trivia_game_string">Trivia Game</string>
    <string name="about_string">About</string>

    <string name="design_credit">Application Designed by: Joel Brisbin</string>
    <string name="back_end_credit">Back-End Developed by: Nathan Haungs</string>
    <string name="framework_library_credit">Developed with: Laravel and Picasso</string>
    <string name="special_thanks_credit">Special Thanks to: Dennis Gibson, Kurt Grannan,\nand Kim Hunter</string>
    <string name="copyright">©2016 Sisters of Charity</string>
</resources>
