<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.haungsn.finalprojectapi15.MenuActivity"
    tools:showIn="@layout/activity_menu"
    android:background="@color/background_material_dark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/memory_game_card"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="75dp"
            card_view:cardElevation="2sp"
            card_view:cardBackgroundColor="#7C2B83"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/memory_game_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/memory_game_string"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/timeline_card"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="75dp"
            card_view:cardElevation="2sp"
            card_view:cardBackgroundColor="#00467F"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/timeline_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/timeline_string"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/trivia_game_card"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="75dp"
            card_view:cardElevation="2sp"
            card_view:cardBackgroundColor="#7C2B83"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/trivia_game_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/trivia_game_string"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/about_card"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="75dp"
            card_view:cardElevation="2sp"
            card_view:cardBackgroundColor="#00467F"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_string"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
